"checkpoint se lee la input original y nueva sin problemas, aun sin funcionalidad"

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 MobileGridSimulation/db/simulationdb.properties
+*.class
+MobileGrid/bin/edu/isistan/mobileGrid/node/Device$JobMessageHandler.class
+*.properties
