abstraction of resend entity for devices as well as scheduler

--- a/MobileGridSimulation/sim_input/TEST-NetworkConnection-1-0.cnf
+++ b/MobileGridSimulation/sim_input/TEST-NetworkConnection-1-0.cnf
@@ -3,7 +3,7 @@
 ;nodeFile
 sim_input/nodes/1TestDevice-1-0.cnf
 
-;loadBalancing: edu.isistan.gridgain.spi.loadbalacing.energyaware.GridEnergyAwareLoadBalancing
+;loadBalancing: edu.isistan.gridgain.spi.loadbalacing.energyaware.GridEnergyAwareWithTimerAndReintentsLoadBalancing 1000-3
 ;comparator: edu.isistan.gridgain.information.comparator.seas.EnhancedSEASComparator
 
 ;batteryFile
