--- a/MobileGridSimulation/sim_input/device_profile/TestDevice/connectionEvents.cnf
+++ b/MobileGridSimulation/sim_input/device_profile/TestDevice/connectionEvents.cnf
@@ -1,4 +1,6 @@
 #NETWORK RELATED EVENT;[TIME]
 ENTER_NETWORK;3;
 LEAVE_NETWORK;10000;
-ENTER_NETWORK;20000;
+ENTER_NETWORK;12000;
+LEAVE_NETWORK;32000;
+ENTER_NETWORK;34000;
